--- a/template/package.json
+++ b/template/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "sample-template",
+  "name": "{{ slug }}",
   "description": "",
   "version": "0.1",
   "engines": {
     "sketch": ">=49.0"
   },
   "skpm": {
-    "name": "sample-template",
+    "name": "{{ name }}",
     "manifest": "plugin/src/manifest.json",
-    "main": "sample-template.sketchplugin",
+    "main": "{{ slug }}.sketchplugin",
     "assets": [
       "plugin/assets/**/*"
     ],
